--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fetch to Zip Microservice Client</title>
-    <link rel="stylesheet" href="style.css"> <!-- Link to external CSS -->
+    <link rel="stylesheet" href="static/style.css"> <!-- Link to external CSS -->
 </head>
 <body>
     <div id="notifications-container"></div>
@@ -157,7 +157,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script> <!-- Link to external JS -->
+    <script src="static/script.js"></script> <!-- Link to external JS -->
 </body>
 </html>
 
